--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "globals": "^16.4.0",
     "sass": "^1.97.3",
     "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
